--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    ;<link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="smile">
         <div class="smile__container">
             <div class="red"></div>
             <div class="green"></div>
-            <div class="blue"></div>
+            <div class="blue">
+                <div class="blue__eyes">
+                    <div class="blue__eyes1"></div>
+                    <div class="blue__eyes1"></div>
+                </div>
+                <div class="blue__rot"></div>
+            </div>
         </div>
     </div>
 </body>
