--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <div class="smile">
         <div class="smile__container">
             <div class="red"></div>
-            <div class="green"></div>
+            <div class="green">
+                <div class="green__eyes">
+                    <div class="green__eye"></div>
+                    <div class="green__eye"></div>
+                </div>
+                <div class="green__mouth"></div>
+            </div>
             <div class="blue"></div>
         </div>
     </div>
